--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title> Kunal's Resume</title>
 </head>
 <body>
-    <header id="me">
-        <img width="300" src="image/krishana.jpg" alt="my pic">
+    
+        <img width="300" src="C:\Users\hp\Desktop\ProgPrince\Web Dev\First Web\mycoolwebsit\resume\krishana.jpg" alt="my pic">
+
+        <header id="me">
         <h1>Kunal Pandey</h1>
         <p> <i>  Computer Science Student </i> </p>
         <p>I Love🧡 Web Deveolpment</p>
