--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-        <img width="300" src="C:\Users\hp\Desktop\ProgPrince\Web Dev\First Web\mycoolwebsit\resume\krishana.jpg" alt="my pic">
+        <img width="300" src="C:\Users\hp\Desktop\ProgPrince\Web Dev\First Web\mycoolwebsit\image\krishana.jpg" alt="my pic">
 
         <header id="me">
         <h1>Kunal Pandey</h1>
