--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     
-        <img width="300" src="resume/krishana.jpg" alt="my pic">
+        <img width="300" src="images/krishana.jpg" alt="my pic">
 
         <header id="me">
-        <h1>Kunal Pandey</h1>
+        <h1>Kunal Pandey</h1
         <p> <i>  Computer Science Student </i> </p>
         <p>I Love🧡 Web Deveolpment</p>
         <nav>
